<?xml version="1.0"?>
<package format="2">
  <name>marble_qav500_sensor_config_1</name>
  <version>0.1.0</version>
  <description>
    TODO
  </description>

  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Bacada</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roslaunch</buildtool_depend>
  <buildtool_depend>urdf</buildtool_depend>
  <buildtool_depend>xacro</buildtool_depend>

  <depend>roscpp</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
